------------------------------------------------------------------------
r1879 | vapier | 2007-11-05 16:14:03 -0500 (Mon, 05 Nov 2007) | 1 line

add BF547 to accepted list
------------------------------------------------------------------------
r1878 | vapier | 2007-11-04 12:17:38 -0500 (Sun, 04 Nov 2007) | 1 line

dont store .depend in svn since conflicts come up easily
------------------------------------------------------------------------
r1876 | vapier | 2007-11-02 18:17:10 -0400 (Fri, 02 Nov 2007) | 1 line

fixup tty code in general to use autotools
------------------------------------------------------------------------
r1875 | vapier | 2007-11-02 15:37:00 -0400 (Fri, 02 Nov 2007) | 1 line

fixup elf.h detection on non-elf systems and use the autotools AC_C_BIGENDIAN check
------------------------------------------------------------------------
r1874 | vapier | 2007-11-02 15:07:39 -0400 (Fri, 02 Nov 2007) | 1 line

fixup atconfig utilization
------------------------------------------------------------------------
r1873 | vapier | 2007-11-02 00:35:44 -0400 (Fri, 02 Nov 2007) | 1 line

initial cut at optional autotoolization
------------------------------------------------------------------------
r1866 | vapier | 2007-10-17 22:18:19 -0400 (Wed, 17 Oct 2007) | 1 line

add an option to use the VMAs rather than the LMAs when generating addresses
------------------------------------------------------------------------
r1865 | vapier | 2007-10-15 10:10:32 -0400 (Mon, 15 Oct 2007) | 1 line

skip weak symbols
------------------------------------------------------------------------
r1864 | vapier | 2007-10-15 00:22:01 -0400 (Mon, 15 Oct 2007) | 1 line

dont sleep on the very last block
------------------------------------------------------------------------
r1860 | vapier | 2007-10-11 13:29:59 -0400 (Thu, 11 Oct 2007) | 1 line

disable backtraces during testing
------------------------------------------------------------------------