@@ -1,4 +1,4 @@
-AC_INIT(ldr-utils, svn-1879, [vapier@blackfin.uclinux.org])
+AC_INIT(ldr-utils, svn-1905, [vapier@blackfin.uclinux.org])
 AM_INIT_AUTOMAKE([1.10 dist-bzip2 no-dist-gzip])
 AC_CONFIG_HEADER(config.h)
 
@@ -15,6 +15,7 @@ errno.h \
 fcntl.h \
 getopt.h \
 libgen.h \
+netdb.h \
 pthread.h \
 pty.h \
 signal.h \
@@ -27,14 +28,17 @@ termios.h \
 time.h \
 unistd.h \
 util.h \
+winsock2.h \
+ws2tcpip.h \
 sys/endian.h \
 sys/mman.h \
+sys/socket.h \
 sys/stat.h \
 sys/types.h \
 sys/wait.h \
 ])
 
-AC_CHECK_FUNCS_ONCE([fseeko ftello mmap])
+AC_CHECK_FUNCS_ONCE([alarm fdatasync fseeko ftello getaddrinfo mmap usleep])
 
 AC_CHECK_LIB([util], [openpty], [PTY_LIB="-lutil"], [PTY_LIB=""])
 AC_SUBST([PTY_LIB])
